--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       </script>      
 </head>
 <body>
-    <div id="desktop"></div>
+    <div id="desktop">
+      <div id="notifications-container"></div>
+    </div>
     <div id="taskbar">
         <div id="start-button"><img height="25" src="/logo.png"></img></div>
     </div>
