--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 localStorage.setItem('theme', themeName);
                 loadTheme(themeName);
             };
+			window.loadTheme = loadTheme;
         })();
       </script>      
+	  <link rel="stylesheet" href="/global.css"></link>
 </head>
 <body>
     <div id="desktop">
@@ -64,9 +66,7 @@
             <div class="start-item" onclick="bye()">🔒</div>
             <div class="start-item" onclick="loadapp()">📦</div>
         </div>
-        <div class="start-content">
-            nothing, i guess.
-        </div>
+        <div class="start-content"></div>
     </div>
 
     <script src="/index.js"></script>
