i aint explaining what i did, read changelog, its a lot

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
     <div id="desktop">
       <div id="notifications-container"></div>
     </div>
-    <div id="taskbar">
-        <div id="start-button"><img height="25" src="/logo.png"></img></div>
+    <div id="taskbar" style="align-items: center;">
+        <div id="start-buttons">
+          <img id="start-button" height="40" src="/logo.png"></img>
+        </div>
     </div>
     <div onclick="jsexec()" id="clock"></div>
     <div id="start-menu">
