--- a/index.html
+++ b/index.html
@@ -1,74 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>MrServer</title>
     <script src="/etc/jquery.min.js"></script>
     <script src="/etc/xterm.js"></script>
     <script src="/etc/xterm-addon-fit.min.js"></script>
     <script src="/etc/sha256.min.js"></script>
-    <link rel="stylesheet" href="/etc/xterm.css">
+    <link rel="stylesheet" href="/etc/xterm.css" />
     <script>
-        async function loadScripts(url) {
-          try {
-            const response = await fetch("./" + url + "/.json");
-            const scripts = await response.json(); 
-            scripts.forEach(script => {
+      async function loadScripts(url) {
+        try {
+          const response = await fetch("./" + url + "/.json");
+          const scripts = await response.json();
+
+          for (const script of scripts) {
+            await new Promise((resolve, reject) => {
               const scriptElement = document.createElement("script");
               scriptElement.src = `/${url}/${script}.js`;
-              scriptElement.type = script.startsWith("m_") ? "module" : "text/javascript";
+              scriptElement.type = script.startsWith("m_")
+                ? "module"
+                : "text/javascript";
+              scriptElement.onload = resolve;
+              scriptElement.onerror = reject;
               document.body.appendChild(scriptElement);
             });
-          } catch (error) {
-            console.error("Failed to load apps:", error);
           }
+        } catch (error) {
+          console.error("Failed to load apps:", error);
         }
-      
-        loadScripts("apps");
-        loadScripts("3rd_party_apps");
-            (function() {
-            const savedTheme = localStorage.getItem('theme') || 'default';
-            loadTheme(savedTheme);
-            function loadTheme(themeName) {
-                const oldLink = document.getElementById('theme-style');
-                if (oldLink) oldLink.remove();
-                const link = document.createElement('link');
-                link.rel = 'stylesheet';
-                link.href = `/themes/${themeName}.css`;
-                link.id = 'theme-style';
-                document.head.appendChild(link);
-            }
-            window.setTheme = (themeName) => {
-                localStorage.setItem('theme', themeName);
-                loadTheme(themeName);
-            };
-			window.loadTheme = loadTheme;
-        })();
-      </script>      
-	  <link rel="stylesheet" href="/global.css"></link>
-</head>
-<body>
+      }
+
+      (async () => {
+        await loadScripts("apps");
+        await loadScripts("3rd_party_apps");
+      })();
+
+      (function () {
+        const savedTheme = localStorage.getItem("theme") || "default";
+        loadTheme(savedTheme);
+        function loadTheme(themeName) {
+          const oldLink = document.getElementById("theme-style");
+          if (oldLink) oldLink.remove();
+          const link = document.createElement("link");
+          link.rel = "stylesheet";
+          link.href = `/themes/${themeName}.css`;
+          link.id = "theme-style";
+          document.head.appendChild(link);
+        }
+        window.setTheme = (themeName) => {
+          localStorage.setItem("theme", themeName);
+          loadTheme(themeName);
+        };
+        window.loadTheme = loadTheme;
+      })();
+    </script>
+    <link rel="stylesheet" href="/global.css" />
+  </head>
+  <body>
     <div id="desktop">
       <div id="notifications-container"></div>
     </div>
-    <div id="taskbar" style="align-items: center;">
-        <div id="start-buttons">
-          <img id="start-button" height="40" src="/logo.png"></img>
-        </div>
+    <div id="taskbar" style="align-items: center">
+      <div id="start-buttons">
+        <img id="start-button" height="40" src="/logo.png" />
+      </div>
     </div>
     <div onclick="jsexec()" id="clock"></div>
     <div id="start-menu">
-        <div class="start-sidebar">MrServer
-        </div>
-        <div class="start-items">
-            <div class="start-item" onclick="shutdown()">&#x23FB;</div>
-            <div class="start-item" onclick="openApp('reboot')">&#x27F3;</div>
-            <div class="start-item" onclick="bye()">🔒</div>
-            <div class="start-item" onclick="loadapp()">📦</div>
-        </div>
-        <div class="start-content"></div>
+      <div class="start-sidebar">MrServer</div>
+      <div class="start-items">
+        <div class="start-item" onclick="shutdown()">&#x23FB;</div>
+        <div class="start-item" onclick="openApp('reboot')">&#x27F3;</div>
+        <div class="start-item" onclick="bye()">🔒</div>
+        <div class="start-item" onclick="loadapp()">📦</div>
+      </div>
+      <div class="start-content"></div>
     </div>
 
     <script src="/index.js"></script>
-</body>
+  </body>
 </html>
